added ESP32 test firmware

--- a/BLEConsole/BLEConsole.csproj
+++ b/BLEConsole/BLEConsole.csproj
@@ -176,7 +176,9 @@
       <FileType>Assembly</FileType>
     </PublishFile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="ESP32TestDevice\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="AppIcon.ico" />
   </ItemGroup>
